{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 96,
  "lineage": "c18c1d1f-c769-8ea5-7ce2-cd7af9f68c77",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1aea1d6f3bdd76b",
            "arn": "arn:aws:ec2:eu-west-1:960896743245:instance/i-0309699ed4f147b39",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0309699ed4f147b39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jensssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-070ae598e9c9ec045",
            "private_dns": "ip-10-0-101-213.eu-west-1.compute.internal",
            "private_ip": "10.0.101.213",
            "public_ip": "54.246.64.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-019c1c938eeee908d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06eaf601d0c4f21a3",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02102a9622cb8e160",
              "sg-04099a0e6d0a2b270",
              "sg-05b6f983047ae477c"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.template_file.user_data",
            "module.my-vpc.aws_subnet.public",
            "module.web_server_sg-http.module.sg.aws_security_group.this",
            "module.web_server_sg-http.module.sg.aws_security_group.this_name_prefix",
            "module.web_server_sg-https.module.sg.aws_security_group.this",
            "module.web_server_sg-https.module.sg.aws_security_group.this_name_prefix",
            "module.web_server_sg-ssh.module.sg.aws_security_group.this",
            "module.web_server_sg-ssh.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0862e89db3d33bf2f",
            "domain": "vpc",
            "id": "eipalloc-0b4f1a9cdd63a7467",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c5839f0d4fecdf3a",
            "private_dns": "ip-10-0-101-190.eu-west-1.compute.internal",
            "private_ip": "10.0.101.190",
            "public_dns": "ec2-54-220-243-123.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.243.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00ed046a61cd1051d",
            "domain": "vpc",
            "id": "eipalloc-0f005d214e5190f0d",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0b676801ce291b091",
            "private_dns": "ip-10-0-102-74.eu-west-1.compute.internal",
            "private_ip": "10.0.102.74",
            "public_dns": "ec2-34-252-109-87.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.252.109.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0027add5890b9e374",
            "domain": "vpc",
            "id": "eipalloc-02326da803590bbce",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0f8626ae448531f79",
            "private_dns": "ip-10-0-103-93.eu-west-1.compute.internal",
            "private_ip": "10.0.103.93",
            "public_dns": "ec2-54-78-223-121.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.78.223.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:internet-gateway/igw-0a29ab7171f8d5324",
            "id": "igw-0a29ab7171f8d5324",
            "owner_id": "960896743245",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4f1a9cdd63a7467",
            "connectivity_type": "public",
            "id": "nat-023b8719a2054f26a",
            "network_interface_id": "eni-0c5839f0d4fecdf3a",
            "private_ip": "10.0.101.190",
            "public_ip": "54.220.243.123",
            "subnet_id": "subnet-06eaf601d0c4f21a3",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.my-vpc.aws_internet_gateway.this",
            "module.my-vpc.aws_subnet.public",
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my-vpc.aws_eip.nat"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f005d214e5190f0d",
            "connectivity_type": "public",
            "id": "nat-048ab88d0eacd0968",
            "network_interface_id": "eni-0b676801ce291b091",
            "private_ip": "10.0.102.74",
            "public_ip": "34.252.109.87",
            "subnet_id": "subnet-0bf65217f3d542fd9",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.my-vpc.aws_eip.nat",
            "module.my-vpc.aws_internet_gateway.this",
            "module.my-vpc.aws_subnet.public",
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02326da803590bbce",
            "connectivity_type": "public",
            "id": "nat-02ce80a24e44f91e4",
            "network_interface_id": "eni-0f8626ae448531f79",
            "private_ip": "10.0.103.93",
            "public_ip": "54.78.223.121",
            "subnet_id": "subnet-01cd64ddfca8d0016",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-eu-west-1c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my-vpc.aws_eip.nat",
            "module.my-vpc.aws_internet_gateway.this",
            "module.my-vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bf3fc5966bfec5f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-023b8719a2054f26a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf3fc5966bfec5f5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my-vpc.aws_eip.nat",
            "module.my-vpc.aws_internet_gateway.this",
            "module.my-vpc.aws_nat_gateway.this",
            "module.my-vpc.aws_route_table.private",
            "module.my-vpc.aws_subnet.public",
            "module.my-vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cc701916095e77a31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-048ab88d0eacd0968",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cc701916095e77a3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_eip.nat",
            "module.my-vpc.aws_internet_gateway.this",
            "module.my-vpc.aws_nat_gateway.this",
            "module.my-vpc.aws_route_table.private",
            "module.my-vpc.aws_subnet.public",
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00014e3867d02ff141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02ce80a24e44f91e4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00014e3867d02ff14",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_eip.nat",
            "module.my-vpc.aws_internet_gateway.this",
            "module.my-vpc.aws_nat_gateway.this",
            "module.my-vpc.aws_route_table.private",
            "module.my-vpc.aws_subnet.public",
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a29ab7171f8d5324",
            "id": "r-rtb-0e0bdf4caf17b73801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e0bdf4caf17b7380",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_internet_gateway.this",
            "module.my-vpc.aws_route_table.public",
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:route-table/rtb-0bf3fc5966bfec5f5",
            "id": "rtb-0bf3fc5966bfec5f5",
            "owner_id": "960896743245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-023b8719a2054f26a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:route-table/rtb-0cc701916095e77a3",
            "id": "rtb-0cc701916095e77a3",
            "owner_id": "960896743245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-048ab88d0eacd0968",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:route-table/rtb-00014e3867d02ff14",
            "id": "rtb-00014e3867d02ff14",
            "owner_id": "960896743245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02ce80a24e44f91e4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:route-table/rtb-0e0bdf4caf17b7380",
            "id": "rtb-0e0bdf4caf17b7380",
            "owner_id": "960896743245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a29ab7171f8d5324",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b6e685d2c4f7b1a",
            "route_table_id": "rtb-0bf3fc5966bfec5f5",
            "subnet_id": "subnet-05ff707f0aef37a51"
          },
          "dependencies": [
            "module.my-vpc.aws_route_table.private",
            "module.my-vpc.aws_subnet.private",
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea590681e71bc42b",
            "route_table_id": "rtb-0cc701916095e77a3",
            "subnet_id": "subnet-0c4836a3c81cf3d4b"
          },
          "dependencies": [
            "module.my-vpc.aws_route_table.private",
            "module.my-vpc.aws_subnet.private",
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a236957eb453522",
            "route_table_id": "rtb-00014e3867d02ff14",
            "subnet_id": "subnet-09d4fbf0a24c26c78"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my-vpc.aws_route_table.private",
            "module.my-vpc.aws_subnet.private",
            "module.my-vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfe00ba08e601785",
            "route_table_id": "rtb-0e0bdf4caf17b7380",
            "subnet_id": "subnet-06eaf601d0c4f21a3"
          },
          "dependencies": [
            "module.my-vpc.aws_route_table.public",
            "module.my-vpc.aws_subnet.public",
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6d77b16771f5b50",
            "route_table_id": "rtb-0e0bdf4caf17b7380",
            "subnet_id": "subnet-0bf65217f3d542fd9"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my-vpc.aws_route_table.public",
            "module.my-vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b08eef10423c9f45",
            "route_table_id": "rtb-0e0bdf4caf17b7380",
            "subnet_id": "subnet-01cd64ddfca8d0016"
          },
          "dependencies": [
            "module.my-vpc.aws_route_table.public",
            "module.my-vpc.aws_subnet.public",
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:subnet/subnet-05ff707f0aef37a51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05ff707f0aef37a51",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "960896743245",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:subnet/subnet-0c4836a3c81cf3d4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c4836a3c81cf3d4b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "960896743245",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:subnet/subnet-09d4fbf0a24c26c78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09d4fbf0a24c26c78",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "960896743245",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:subnet/subnet-06eaf601d0c4f21a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-06eaf601d0c4f21a3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "960896743245",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:subnet/subnet-0bf65217f3d542fd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0bf65217f3d542fd9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "960896743245",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my-vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:subnet/subnet-01cd64ddfca8d0016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-01cd64ddfca8d0016",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "960896743245",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.my-vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:vpc/vpc-0d2400ca89a26ced1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0850f2e0f9ba3989f",
            "default_route_table_id": "rtb-0a1789ae8cd3c3c21",
            "default_security_group_id": "sg-0f41fa936e7e8f1bf",
            "dhcp_options_id": "dopt-92d8f7f4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d2400ca89a26ced1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a1789ae8cd3c3c21",
            "owner_id": "960896743245",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg-http.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:security-group/sg-04099a0e6d0a2b270",
            "description": "Security group for web-server with HTTP ports open within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04099a0e6d0a2b270",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "web-server-http-20210929093913411300000001",
            "name_prefix": "web-server-http-",
            "owner_id": "960896743245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-http"
            },
            "tags_all": {
              "Name": "web-server-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg-http.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2198967037",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04099a0e6d0a2b270",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_sg-http.module.sg.aws_security_group.this_name_prefix",
            "module.my-vpc.aws_vpc.this",
            "module.web_server_sg-http.module.sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg-http.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3907430149",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04099a0e6d0a2b270",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.web_server_sg-http.module.sg.aws_security_group.this",
            "module.web_server_sg-http.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg-http.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-1181073849",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04099a0e6d0a2b270",
            "self": true,
            "source_security_group_id": "sg-04099a0e6d0a2b270",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.web_server_sg-http.module.sg.aws_security_group.this",
            "module.web_server_sg-http.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg-https.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:security-group/sg-02102a9622cb8e160",
            "description": "Security group for web-server with HTTPS ports open within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02102a9622cb8e160",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "web-server-https-20210929095712868100000001",
            "name_prefix": "web-server-https-",
            "owner_id": "960896743245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-https"
            },
            "tags_all": {
              "Name": "web-server-https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg-https.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-4019040331",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02102a9622cb8e160",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.web_server_sg-https.module.sg.aws_security_group.this",
            "module.web_server_sg-https.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg-https.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-991672100",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02102a9622cb8e160",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.web_server_sg-https.module.sg.aws_security_group.this",
            "module.web_server_sg-https.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg-https.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-4185369140",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02102a9622cb8e160",
            "self": true,
            "source_security_group_id": "sg-02102a9622cb8e160",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.web_server_sg-https.module.sg.aws_security_group.this",
            "module.web_server_sg-https.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg-ssh.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:960896743245:security-group/sg-05b6f983047ae477c",
            "description": "Security group for web-server with SSH ports open within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b6f983047ae477c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "web-server-ssh-20210929093913411300000002",
            "name_prefix": "web-server-ssh-",
            "owner_id": "960896743245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-server-ssh"
            },
            "tags_all": {
              "Name": "web-server-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2400ca89a26ced1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_server_sg-ssh.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1203654807",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05b6f983047ae477c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_sg-ssh.module.sg.aws_security_group.this_name_prefix",
            "module.my-vpc.aws_vpc.this",
            "module.web_server_sg-ssh.module.sg.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg-ssh.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2760490807",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05b6f983047ae477c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.web_server_sg-ssh.module.sg.aws_security_group.this",
            "module.web_server_sg-ssh.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_sg-ssh.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-3220799440",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05b6f983047ae477c",
            "self": true,
            "source_security_group_id": "sg-05b6f983047ae477c",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.this",
            "module.web_server_sg-ssh.module.sg.aws_security_group.this",
            "module.web_server_sg-ssh.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}